src/z80asm/z80asm2/t/40-syntax/expected/xlib_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/xlib_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/xlib_01.asm...
t/40-syntax/input/xlib_01.asm:1:5: error: Identifier expected
    xlib
        ^
t/40-syntax/input/xlib_01.asm:2:6: error: Identifier expected
    xlib ,
         ^
t/40-syntax/input/xlib_01.asm:4:9: error: Identifier expected
    xlib a1,
            ^
Program
    SymbolDeclareStmt
        Location: t/40-syntax/input/xlib_01.asm:3:1
        Type: Public
        Symbols:
            a1
    SymbolDeclareStmt
        Location: t/40-syntax/input/xlib_01.asm:5:1
        Type: Public
        Symbols:
            a1
            a2
    SymbolDeclareStmt
        Location: t/40-syntax/input/xlib_01.asm:6:1
        Type: Public
        Symbols:
            a1
            a2
            a3
